@@ -1,3 +1,11 @@
+2010-09-27 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCerr.c,
+	* src/SDCCerr.h: added W_DEPRECATED_OPTION
+	* src/ds390/main.c,
+	* src/mcs51/main.c,
+	* src/SDCCmain.c (linkEdit): deprecated --no-pack-iram
+
 2010-09-26 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/hc08/peeph.def:
